--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+
+
 .cardOne{
     width: 30%;
+    min-width:70px;
     height: 100%;
     display:flex;
     justify-content: center;
     align-items: center;
+   
 }
 
 .cardContainer{
@@ -14,20 +20,107 @@
     height:150px;
     display:flex;
     flex-direction: row;
+    min-width:200px;
 }
+
+@media only screen and (max-width: 630px) {
+    .cardContainer{
+        background-color: whitesmoke;
+        border-radius:5px;
+        box-shadow: 6px 6px 13px -4px #000000;
+        width: 40%;
+        height:150px;
+        display:grid;
+    }
+
+    .cardOne{
+        width: 30%;
+        min-width:70px;
+        height: 100%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        margin-left:30%;
+    }
+
+    .cardOneText{
+        align-self: center;
+        font-size:12px;
+        font-family: 'Montserrat', sans-serif;
+        margin-left:10px;
+    }
+  }
 
 .imageContainer{
     border-radius: 100px;
     overflow: hidden;
-    height:80px;
-    width: 80px;
-    position:relative;
+    height:70px;
+    width:70px;
+    min-width:70px;
     
 }
 
 .cardOneText{
     align-self: center;
     font-size:12px;
+    font-family: 'Montserrat', sans-serif;
+    
+}
+
+.cardTwoContainer{
+    background-color: whitesmoke;
+    border-radius:5px;
+    box-shadow: 6px 6px 13px -4px #000000;
+    width: 40%;
+    height:75px;
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: center;
+    min-width:200px;
+}
+
+.cardThreeContainer{
+    background-color: whitesmoke;
+    border-radius:5px;
+    box-shadow: 6px 6px 13px -4px #000000;
+    width: 40%;
+    height:75px;
+    display:flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: center;
+    min-width:200px;
+}
+
+.cardTwoText{
+    align-self: center;
+    font-size:12px;
+    font-family: 'Montserrat', sans-serif;
+    
+}
+
+
+.cardThreeButtonContainer{
+    align-self: center;
+    font-size:10px;
+    font-family: 'Montserrat', sans-serif;
+    border-radius:5px;
+    box-shadow: 3px 3px 11px -6px #000000;
+    margin: 15px;
+}
+
+.cardThreeInnerText{
+    padding:15px;
+}
+
+.cardThreeButtonContainer:hover{
+    background-color:#1a202c;
+}
+
+
+.cityStateText{
+    font-weight: bold;
 }
 
 .containerDiv{
@@ -35,3 +128,5 @@
     margin-top: 100px;
     
 }
+
+
