--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -39,34 +39,6 @@
     
 }
 
-@media only screen and (max-width: 850px) {
-    .cardContainer{
-        background-color: whitesmoke;
-        border-radius:5px;
-        box-shadow: 6px 6px 13px -4px #000000;
-        width: 50%;
-        height:200px;
-        display:grid;
-    }
-
-    .cardOne{
-        width: 30%;
-        min-width:70px;
-        height: 100%;
-        display:flex;
-        justify-content: center;
-        align-items: center;
-        margin-left:32%;
-    }
-
-    .cardOneText{
-        align-self: center;
-        font-size:16px;
-        font-family: 'Montserrat', sans-serif;
-        justify-self: center;
-    }
-  }
-
 
 
 .cardTwoContainer{
@@ -138,3 +110,79 @@
 .countyText:hover{
     text-decoration:underline;
 }
+
+@media only screen and (max-width: 850px) {
+    .cardContainer{
+        background-color: whitesmoke;
+        border-radius:5px;
+        box-shadow: 6px 6px 13px -4px #000000;
+        width: 70%;
+        height:200px;
+        display:grid;
+    }
+
+    .cardOne{
+        width: 30%;
+        min-width:70px;
+        height: 100%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        margin-left:32%;
+    }
+
+    .cardOneText{
+        align-self: center;
+        font-size:16px;
+        font-family: 'Montserrat', sans-serif;
+        justify-self: center;
+    }
+
+    .cardTwoContainer{
+        background-color: whitesmoke;
+        border-radius:5px;
+        box-shadow: 6px 6px 13px -4px #000000;
+        width: 70%;
+        height:170px;
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        justify-content: center;
+        min-width:200px;
+    }
+    
+    .cardTwoText{
+        align-self: center;
+        font-size:18px;
+        font-family: 'Montserrat', sans-serif;
+        justify-self: center;
+    }
+
+    .cardThreeContainer{
+        background-color: whitesmoke;
+        border-radius:5px;
+        box-shadow: 6px 6px 13px -4px #000000;
+        width: 70%;
+        height:100px;
+        display:flex;
+        flex-direction: row;
+        align-items:center;
+        justify-content: center;
+        min-width:200px;
+    }
+    
+    .cardThreeButtonContainer{
+        align-self: center;
+        font-size:20px;
+        font-family: 'Montserrat', sans-serif;
+        border-radius:5px;
+        box-shadow: 3px 3px 11px -6px #000000;
+        margin: 15px;
+    }
+    
+    .cardThreeInnerText{
+        padding:15px;
+    }
+  }
+
+
