an incredibly important change

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -64,6 +64,7 @@
     font-family: 'Montserrat', sans-serif;
     color: white; 
     margin-top:25px;
+    font-weight: bold;
 }
 
 .cardOneTextLowerBlog{
