--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -192,6 +192,52 @@
 
 
 
+
+.blogCardContainer{
+    display:flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: center;
+    width:100%;
+}
+
+.innerBlogContainer{
+    background-color: whitesmoke;
+    border-radius:5px;
+    box-shadow: 6px 6px 13px -4px #000000;
+    min-width:60%;
+    max-width:60%;
+    height:200px;
+    margin-top:100px;
+    display:flex;
+    flex-direction: row;
+}
+
+
+.innerBlogContainer:hover{
+    opacity:0.7;
+    cursor:pointer;
+}
+
+.blogTitleText{
+    font-size: 20px;
+    margin-left:2%;
+    margin-right:2%;
+    /* width:90%;
+  
+    height:15%; */
+    font-weight: bold;
+    word-break: break-word;
+}
+
+.imageContainerBlogPost{  
+    overflow: hidden;
+    height:200px;
+    width:200px;
+    min-width:200px;
+    border-radius: 5px;
+}
+
 @media only screen and (max-width: 850px) {
     .cardContainer{
         background-color: whitesmoke;
