--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
-
-
 .cardOne{
     width: 30%;
     min-width:70px;
@@ -75,6 +73,7 @@
     margin-top:25px;
     width:50%;
     text-align: center;
+    margin-bottom:20px;
 }
 
 .cardOneTextLowerBlogTwo{
@@ -165,8 +164,6 @@
     text-decoration:underline;
 }
 
-
-
 .cardBlogContainer{
     background-color: whitesmoke;
     border-radius:5px;
@@ -191,51 +188,75 @@
 }
 
 
-
-
 .blogCardContainer{
-    display:flex;
-    flex-direction: row;
-    align-items:center;
-    justify-content: center;
-    width:100%;
-}
-
-.innerBlogContainer{
-    background-color: whitesmoke;
-    border-radius:5px;
+    margin: 10px 20px;
+    background-color:whitesmoke;
     box-shadow: 6px 6px 13px -4px #000000;
-    min-width:60%;
-    max-width:60%;
-    height:200px;
-    margin-top:100px;
-    display:flex;
-    flex-direction: row;
+    border-radius: 10px;
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    max-width: 900px;
+    cursor: pointer;
+    overflow: hidden;
 }
 
 
-.innerBlogContainer:hover{
+.blogCardContainer:hover{
     opacity:0.7;
     cursor:pointer;
 }
 
 .blogTitleText{
-    font-size: 20px;
-    margin-left:2%;
-    margin-right:2%;
-    /* width:90%;
-  
-    height:15%; */
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
     font-weight: bold;
-    word-break: break-word;
 }
 
 .imageContainerBlogPost{  
-    overflow: hidden;
-    height:200px;
-    width:200px;
-    min-width:200px;
-    border-radius: 5px;
+    width: 30%;
+    background-size: cover;
+    background-position: 40%;
+}
+
+.blogMetaContainer{
+    flex-grow:1;
+    padding: 20px 70px;
+    text-align:left;
+}
+
+.blogSummaryText{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.blogDate{
+    color: #bbb;
+}
+
+.blogTags{
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 6px;
+    column-gap: 4px;
+    margin-top: 0.75rem;
+}
+
+.blogTag{
+    background-color: #e9e9e9;
+    padding: 4px 10px;
+    white-space: nowrap;
+    border-radius: 15px;
+    font-size: .8rem;
+    box-shadow: 10px 10px 30px #f0f0f0;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 850px) {
@@ -329,3 +350,47 @@
   }
 
 
+@media only screen and (max-width: 1000px){
+    .blogCardContainer{
+    width: 80%;
+    flex-direction: column;
+    margin: 10px 20px;
+    box-shadow: 6px 6px 13px -4px #000000;
+    border-radius: 10px;
+    display: flex;
+    align-items: stretch;
+    max-width: 900px;
+    cursor: pointer;
+    overflow: hidden;
+    }
+
+    .blogMetaContainer{
+    width: auto;
+    padding: 0 20px 20px;
+    text-align: left;
+    flex-grow: 1;
+    margin-bottom: 20px;
+    }
+
+}
+
+
+.topLeftHome{
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    transform:translatez(0);
+}
+
+.topLeftHome:hover{
+      opacity:0.5;
+}
+
+.topRightImageContainer{
+    border-radius: 100px;
+    overflow: hidden;
+    height:60px;
+}
