--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -267,12 +267,13 @@
 
 /* cloud stuff  */
 .cloudFoldersContainer{
-    margin-top:100px;
+    
     display:flex;
     flex-direction: row;
     width:95%;
     height:95%;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
+    justify-content:center;
 }
 
 .cloudFolders{
@@ -280,6 +281,7 @@
     background-color: whitesmoke;
     height:15%;
     width:15%;
+    min-width:125px;
     margin: 1rem;
     border-radius:15px;
     margin: 10px 20px;
@@ -314,34 +316,57 @@
 
 
 .cloudImageThumbnails{  
-    margin-top:5%;
+    margin-top:1%;
     border-radius: 15px;
     overflow: hidden;
-    height:90%;
+    height:100%;
     width:100%;
     align-self: center; 
+        
 }
 
 
 .cloudImages{
     padding:15px 15px 15px 15px;
     background-color: whitesmoke;
-    height:20rem;
-    width:20rem;
-    margin: 1rem;
+    height:250px;
+    width:250px;
     border-radius:15px;
-    margin: 10px 20px;
+    margin: 5px 5px;
     box-shadow: 6px 6px 13px -4px #000000;
     cursor: pointer;
+ 
 }
 
+.cloudImages:hover{
+    opacity:0.8;
+    cursor:pointer;
+}
+
+.aref{
+    cursor:default;
+    margin: 10px 10px;
+    border-radius:15px;
+}
+
+
+.folderNameContainer{
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    width:100%;
+    margin-bottom:15px;
+}
+
+
 .folderName{
-    /* color:white;
+    color:white;
     text-align: center;
     font-weight: bold;
     font-size:35px;
     margin-top:50px;
-    width:10vw; */
+    width:50vw;
+    
 }
 
 
@@ -473,7 +498,15 @@
     background: #1a202c;
 }
 
-
+.photoWrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    min-height: 100%;
+    background: #1a202c;
+}
 
 .slugImageContainer {
     width:60vw;  
