Add map key to React.Fragment and align text for landing page card

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -109,6 +109,7 @@
     align-items:center;
     justify-content: center;
     min-width:200px;
+    text-align: center;
 }
 
 .cardTwoText{
@@ -417,6 +418,8 @@
         align-items:center;
         justify-content: center;
         min-width:200px;
+        text-align: center;
+        padding:5px 5px;
     }
 
     .cardBlogContainer{
