added instagram button, changed icons to target _blank

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,7 +138,7 @@
     font-family: 'Montserrat', sans-serif;
     border-radius:5px;
     box-shadow: 3px 3px 11px -6px #000000;
-    margin: 15px;
+    margin: 1rem;
 }
 
 .cardThreeInnerText{
